--- a/styles/common.css
+++ b/styles/common.css
@@ -41,6 +41,7 @@ body {
   color: white;
   font-family: "Graphik Medium", sans-serif;
   font-size: 14px;
+  border: 1px solid #136cfa;
   text-transform: uppercase;
   transition: 0.5s ease-in-out;
 }
@@ -54,6 +55,7 @@ body {
   padding: 0 12px;
   font-family: "Graphik Medium",sans-serif;
   text-align: center;
+  font-size: 32px;
 }
 
 .header {
@@ -144,7 +146,7 @@ body {
   .header__menu {
     display: none;
     grid-template-areas: ".";
-    grid-row-gap: 5px;
+    grid-row-gap: 10px;
     justify-self: start;
     justify-items: start;
   }
