--- a/styles/style.css
+++ b/styles/style.css
@@ -43,13 +43,13 @@
 
 /*Process section*/
 .process__heading {
-  font-size: 32px;
   margin-bottom: 72px;
 }
 .process__scheme {
   margin-bottom: 48px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 12px;
 }
 .process__step-number {
   display: inline-flex;
@@ -73,4 +73,120 @@
   line-height: 24px;
   border-left: 1px solid #e1e1e1;
   padding-left: 32px;
+}
+
+/*Benefits*/
+.benefits {
+  background-color: #136cfa;
+}
+.benefits__heading {
+  color: #fff;
+  margin-bottom: 72px;
+}
+.benefits__cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+.benefits__card {
+  margin: 0 12px 24px 12px;
+  padding: 32px;
+  background-color: #fff;
+  border-radius: 2px;
+  box-shadow: 2px 0px 8px rgba(51, 51, 51, 0.12);
+}
+.benefits__card:hover {
+  box-shadow: 2px 0px 8px rgba(51, 51, 51, 1);
+}
+.benefits__card-header {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 10fr;
+  grid-column-gap: 20px;
+  margin-bottom: 12px;
+}
+.benefits__card-heading {
+  font: 20px "Graphik Medium";
+}
+.benefits__card-description {
+  line-height: 24px;
+}
+.benefits__card-icon_card {
+  content: url(../images/icons/card.svg);
+}
+.benefits__card-icon_envelope {
+  content: url(../images/icons/envelope.svg);
+}
+.benefits__card-icon_document {
+  content: url(../images/icons/document.svg);
+}
+.benefits__card-icon_clock {
+  content: url(../images/icons/clock.svg);
+}
+.benefits__card-icon_tick {
+  content: url(../images/icons/tick.svg);
+}
+.benefits__card-icon_briefcase {
+  content: url(../images/icons/briefcase.svg);
+}
+
+/*Adaptation*/
+@media only screen and (max-width: 1200px) {
+  .benefits__cards {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+  .process__scheme {
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 20px;
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .benefits__card-header {
+    grid-column-gap: 10px;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .benefits__cards {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, 1fr);
+  }
+  .header__container {
+    padding: 0 30px;
+  }
+  .promo {
+    height: 100vh;
+  }
+  .process__scheme {
+    grid-template-columns: 1fr;
+    grid-row-gap: 20px;
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .section__container {
+    padding: 0px 20px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .section {
+    padding: 43px 0;
+  }
+  .promo__heading {
+    font-size: 35px;
+  }
+  .header__container {
+    padding: 0 20px;
+  }
+  .heading {
+    padding: 0;
+  }
+  .section__container {
+    padding: 0px 10px;
+  }
+  .promo .section__container {
+    padding: 0;
+  }
+}
+@media only screen and (max-width: 350px) {
+  .section__container {
+    padding: 0px 5px;
+  }
 }
