--- a/styles/common.css
+++ b/styles/common.css
@@ -53,7 +53,7 @@ body {
 
 .heading {
   padding: 0 12px;
-  font-family: "Graphik Medium",sans-serif;
+  font-family: "Graphik Medium", sans-serif;
   text-align: center;
   font-size: 32px;
 }
@@ -133,11 +133,53 @@ body {
   justify-items: end;
   grid-column-gap: 15px;
 }
-.header__menu-item:hover {
+.header__menu-item:hover,
+.footer__navigation-link:hover {
   color: #136cfa;
 }
 
+/*Footer section*/
+.footer {
+  display: flex;
+  justify-content: center;
+  padding: 16px 0;
+  background-color: #333;
+}
+.footer__container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 1280px;
+  padding: 0 40px;
+}
+.footer__credentials {
+  color: #858585;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-column-gap: 20px;
+}
+.footer__credentials-phone {
+  color: #fff;
+}
+.footer__navigation {
+  justify-self: end;
+  color: #fff;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 20px;
+}
+
+/*Adaptation*/
 @media only screen and (max-width: 1200px) {
+  .footer__navigation {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 10px;
+  }
+  .footer__credentials {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-row-gap: 10px;
+  }
   .header__container {
     grid-template-areas:
       "logo toggle"
@@ -152,5 +194,15 @@ body {
   }
   .header__toggle {
     display: initial;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .footer__navigation {
+    justify-self: start;
+  }
+  .footer__container {
+    grid-row-gap: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
   }
 }
