--- a/styles/common.css
+++ b/styles/common.css
@@ -64,6 +64,7 @@ body {
   width: 100%;
   padding: 8px 0;
   background-color: #ffffff;
+  box-shadow: 2px 0px 8px rgba(51,51,51,0.4);
 }
 .header__container {
   display: grid;
