--- a/styles/style.css
+++ b/styles/style.css
@@ -140,11 +140,116 @@
 .partners__container svg {
   margin: 0 24px;
 }
+.partners__container svg:hover {
+  transform: scale(1.05);
+}
 
 /*Ownership section*/
 .ownership__heading {
   margin-bottom: 48px;
   line-height: 48px;
+}
+.ownership__table {
+  display: grid;
+  grid-template-columns: 5fr 15fr;
+  padding: 0 12px;
+}
+.ownership__legend {
+  height: 408px;
+  margin-top: 48px;
+  padding: 36px 0;
+  background-color: #fafafa;
+  display: grid;
+  grid-template-rows: repeat(7, 1fr);
+}
+.ownership__legend-item {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0 24px;
+  font: 12px "Graphik Medium";
+  min-height: 48px;
+  text-transform: uppercase;
+  color: #858585;
+}
+.ownership__options {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 20px;
+  position: relative;
+}
+.ownership__options:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 408px;
+  top: 48px;
+  left: 0;
+  background-color: #fafafa;
+}
+.ownership__option-container {
+  position: relative;
+}
+.ownership__option {
+  box-shadow: 2px 0px 8px rgba(51, 51, 51, 0.12);
+  padding: 24px;
+  border-radius: 4px;
+  background-color: #fff;
+}
+.ownership__option-heading {
+  font-family: "Graphik Medium", sans-serif;
+  font-size: 24px;
+  line-height: 24px;
+  margin-bottom: 36px;
+}
+.ownership__option-feature {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 48px;
+  line-height: 16px;
+  padding: 6px 0;
+  border-bottom: 1px solid #e1e1e1;
+}
+.ownership__option-feature_optional {
+  color: #ccc;
+}
+.ownership__option-feature_absent {
+  color: #ec4545;
+  margin: 4px 0;
+}
+.ownership__option-feature_present {
+  margin: 4px 0;
+}
+.ownership__option-feature_present:before,
+.ownership__option-feature_absent:before,
+.ownership__option-feature_optional:before {
+  position: relative;
+  top: 2px;
+  margin-right: 8px;
+}
+.ownership__option-feature_present:before {
+  content: url(../images/icons/present.svg);
+}
+.ownership__option-feature_absent:before {
+  content: url(../images/icons/absent.svg);
+}
+.ownership__option-feature_optional:before {
+  content: url(../images/icons/optional.svg);
+}
+.ownership__option-feature:last-child {
+  border: none;
+  padding-bottom: 0;
+}
+.ownership__option-button {
+  display: block;
+  margin-top: 48px;
+  line-height: 48px;
+  text-align: center;
+  height: 48px;
+  background-color: #136cfa;
+  border-radius: 4px;
 }
 
 /*Adaptation*/
@@ -160,6 +265,44 @@
   }
   .benefits__card-header {
     grid-column-gap: 10px;
+  }
+}
+@media only screen and (max-width: 1150px) {
+  .ownership__legend-item {
+    justify-content: flex-start;
+    padding: 0 10px;
+  }
+  .ownership__option {
+    padding: 24px 10px;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .ownership__legend {
+    display: none;
+  }
+  .ownership__option-heading {
+    display: none;
+  }
+  .ownership__option-feature {
+    display: none;
+  }
+  .ownership__options:before {
+    display: none;
+  }
+  .ownership__table {
+    grid-template-columns: none;
+  }
+  .ownership__options {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    grid-row-gap: 20px;
+  }
+  .ownership__option {
+    box-shadow: none;
+    padding: 0;
+  }
+  .ownership__option-button {
+    margin-top: 0;
   }
 }
 @media only screen and (max-width: 700px) {
@@ -190,9 +333,6 @@
   }
 }
 @media only screen and (max-width: 450px) {
-  .partners__container svg {
-    margin: 0;
-  }
   .section {
     padding: 43px 0;
   }
@@ -213,7 +353,10 @@
     padding: 0;
   }
 }
-@media only screen and (max-width: 350px) {
+@media only screen and (max-width: 380px) {
+  .partners__container svg {
+    margin: 0;
+  }
   .section__container,
   .footer__container {
     padding: 0px 5px;
